[package]
name = "meesign-server"
version = "0.2.0"
edition = "2021"

[dependencies]
tonic = { version = "0.10", features = ["transport", "tls"] }
prost = "0.12"
tokio = { version = "1.33", features = ["macros", "rt-multi-thread", "time", "fs"] }
tokio-stream = "0.1.14"
uuid = { version = "1.4.1", features = ["v4", "fast-rng"] }
log = "0.4.16"
env_logger = "0.9.0"
hex = "0.4.3"
clap = { version = "3.1.8", features = ["derive"] }
rand = "0.8.5"
tempfile = "3.3.0"
lazy_static = "1.4.0"
openssl = "0.10.57"
sha2 = "0.10.6"
# FIXME Do not point to quapka's for (this is because of syncing the deployment of PTSRSAP1.
#       Point to the upstream from crocs-muni.
meesign-crypto = { git = "https://github.com/quapka/meesign-crypto", rev = "cb4b31e", features = [ "ptsrsap1", "frost", "elgamal" ], default-features = false }

[build-dependencies]
tonic-build = "0.10"

[features]
default = ["cli"]
cli = []
